--- a/assets/css/scss/style.scss
+++ b/assets/css/scss/style.scss
@@ -73,9 +73,9 @@ html {
 
             .sprdr-detail {
 
-                .sprdr-ninjin {
+                article {
                     width: 100%;
-                    background-color: $lightblue;
+                    padding-bottom: 54px;
                     margin-top: 9.6vw;
                     position: relative;
 
@@ -83,7 +83,6 @@ html {
                         content: '';
                         width: 100%;
                         height: 9.6vw;
-                        background-color: $yellow;
                         @include absolute;
                         transform: translateY(-100%);
                     }
@@ -106,7 +105,7 @@ html {
                         text-align: center;
                     }
 
-                    .sprdr-detail_img {
+                    .sprdr_img {
                         display: block;
                         width: calc(100vw - 48px);
                         height: calc(100vw - 48px);
@@ -115,9 +114,10 @@ html {
                         z-index: 1;
                     }
 
-                    .sprdr-detail-copy {
+                    .sprdr-copy {
                         width: 100%;
                         background-color: $white;
+                        box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .25);
                         padding-bottom: 24px;
                         position: relative;
                         z-index: 0;
@@ -153,7 +153,7 @@ html {
                             }
                         }
 
-                        .sprdr-detail-cta {
+                        .sprdr-cta {
                             width: calc(100% - 48px);
                             height: 48px;
                             border-radius: 40px;
@@ -177,6 +177,81 @@ html {
                             }
                         } 
                     }
+
+                    .sprdr-photo {
+                        width: 100%;
+                        margin-top: 40px;
+                        position: relative;
+
+                        img {
+                            display: block;
+                            width: calc(100% - 52px);
+                            margin: 0 auto;
+                        }
+
+                        .sprdr-treat {
+                            position: absolute;
+                        }
+                    }
+                }
+
+                article:nth-of-type(odd) {
+                    background-color: $lightblue;
+
+                    &::before {
+                        background-color: $yellow;
+                    }
+                }
+
+                article:nth-of-type(even) {
+                    background-color: $yellow;
+
+                    &::before {
+                        background-color: $lightblue;
+                    }
+                }
+
+                .sprdr-carrot {
+
+                    .sprdr-photo {
+
+                        .sprdr-treat {
+                            width: 47.7vw;
+                            bottom: 0;
+                            left: 0;
+                            transform: translateX(-16.8vw);
+                        }
+                    }
+                }
+
+                .sprdr-honey {
+
+                    .sprdr-photo {
+
+                        .sprdr-treat {
+                            width: calc(41.6vw * .75);
+                            bottom: 0;
+                            left: 26px;
+                            transform: translate(20px, 20px);
+                        }
+                    }
+                }
+
+                .sprdr-hyuganatsu {
+
+                    .sprdr-photo {
+
+                        .sprdr-treat {
+                            width: calc(48.8vw * .75);
+                            top: 0;
+                            right: 0;
+                            transform: translate(-20px, 20px);
+                        }
+                    }
+                }
+
+                .sprdr-french {
+                    padding-bottom: 100px;
                 }
             }
         }
