--- a/assets/css/scss/base.scss
+++ b/assets/css/scss/base.scss
@@ -8,6 +8,7 @@ $yellow: #F7F7D0;
 $lemonyellow: #EBEB4A;
 $blue: #084E80;
 $lightblue: #F0F8F8;
+$red: #B8193F;
 
 $font: "Noto Sans JP", sans-serif;
 
@@ -17,6 +18,10 @@ $font: "Noto Sans JP", sans-serif;
     font-weight: 400;
     letter-spacing: .04em;
     line-height: 150%;
+}
+
+.sprdr-pc {
+    display: none !important;
 }
 
 html, body {
@@ -36,7 +41,7 @@ img {
     width: 100%;
 }
 
-@mixin font-ss {
+@mixin font-s {
     font-size: 12px;
 }
 
@@ -74,4 +79,56 @@ img {
 @mixin h2 {
     @include font-ll;
     color: $blue;
+}
+
+@mixin cta1 {
+    width: calc(100% - 48px);
+    height: 48px;
+    border-radius: 40px;
+    background-color: $lemonyellow;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .25);
+    margin: 12px auto 0 auto;
+
+    a {
+        @include center;
+        font-weight: 700;
+        color: $blue;
+        position: relative;
+
+        img {
+            width: 60px;
+            position: absolute;
+            top: 0;
+            right: 0;
+            transform: translate(-9.3vw, -50%) rotate(15deg);
+        }
+    }
+}
+
+
+
+@mixin font-s-pc {
+    font-size: 14px;
+}
+
+@mixin font-l-pc {
+    font-size: 18px;
+}
+
+@mixin h2-pc {
+    font-size: 24px;
+}
+
+@mixin cta1-pc {
+
+    a {
+        
+        img {
+            width: 80px;
+            position: absolute;
+            top: 0;
+            right: 0;
+            transform: translate(-5px, -50%) rotate(15deg);
+        }
+    }
 }
