--- a/assets/css/scss/style.scss
+++ b/assets/css/scss/style.scss
@@ -49,7 +49,7 @@ html {
                     text-align: center;
                 }
 
-                .sprdr-con:nth-of-type(2) {
+                .sprdr-con:nth-of-type(3) {
                     width: 100%;
                     height: 42.5vw;
                     margin-top: 10px;
@@ -144,7 +144,7 @@ html {
                         }
 
                         p:nth-of-type(2) {
-                            @include font-ss;
+                            @include font-s;
                             color: $black;
 
                             span {
@@ -154,28 +154,8 @@ html {
                         }
 
                         .sprdr-cta {
-                            width: calc(100% - 48px);
-                            height: 48px;
-                            border-radius: 40px;
-                            background-color: $lemonyellow;
-                            box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .25);
-                            margin: 12px auto 0 auto;
-
-                            a {
-                                @include center;
-                                font-weight: 700;
-                                color: $blue;
-                                position: relative;
-
-                                img {
-                                    width: 60px;
-                                    position: absolute;
-                                    top: 0;
-                                    right: 0;
-                                    transform: translate(-9.3vw, -50%) rotate(15deg);
-                                }
-                            }
-                        } 
+                            @include cta1;
+                        }
                     }
 
                     .sprdr-photo {
@@ -252,6 +232,267 @@ html {
 
                 .sprdr-french {
                     padding-bottom: 100px;
+                }
+            }
+
+            .sprdr-recommend {
+                background-color: $white;
+                padding-top: 80px;
+
+                h2 {
+                    padding-left: 16px;
+                    font-size: 28px;
+                    font-weight: 700;
+                    color: $black;
+                }
+
+                ul {
+                    width: calc(100% - 32px);
+                    margin: 24px auto 0 auto;
+                    display: flex;
+                    flex-wrap: wrap;
+
+                    li {
+                        width: calc(50% - 8px);
+                        margin-top: 40px;
+
+                        a {
+                            display: block;
+                            color: $black;
+
+                            h3 {
+                                padding-top: 3px;
+                            }
+                        }
+                    }
+
+                    li:nth-of-type(even) {
+                        margin-left: 16px;
+                    }
+
+                    li:nth-of-type(1), li:nth-of-type(2) {
+                        margin-top: 0;
+                    }
+                }
+
+                .sprdr-cta {
+                    width: 77.9vw;
+                    height: 48px;
+                    border-radius: 8px;
+                    background-color: $red;
+                    margin: 24px auto 0 auto;
+                    
+                    a {
+                        @include center;
+                        font-weight: 700;
+                        color: $white;
+                    }
+                }
+            }
+
+            .sprdr-recommend:nth-last-of-type(1) {
+                padding-bottom: 100px;
+            }
+        }
+    }
+}
+
+@media screen and (min-width: 768px) {
+
+    * {
+        font-size: 16px;
+    }    
+
+    .sprdr-sp {
+        display: none !important;
+    }
+    
+    .sprdr-pc {
+        display: block !important;
+    }
+ 
+    html {
+
+        body {
+            
+            .sprdr-fv {
+                height: initial;
+            }
+
+            .sprdr_main {
+               
+                .sprdr-epilogue {
+
+                    .sprdr-con:nth-of-type(1) {
+                        height: 161px;
+
+                        img:nth-of-type(1) {
+                            width: 18.4vw;
+                            position: absolute;
+                            top: 0;
+                            left: 4.5vw;
+                            transform: translateX(0);
+                        }
+
+                        img:nth-of-type(2) {
+                            width: 15.3vw;
+                            height: fit-content;
+                            right: 3.3vw;
+                            transform: translateX(0);
+                        }
+                    }
+
+                    .sprdr-copy {
+                        @include center;
+
+                        h1 {
+                            font-size: 32px;
+                            text-align: initial;
+                        }
+
+                        p {
+                            margin-top: 0;
+                            margin-left: 7.8vw;
+                            @include font-l-pc;
+                            text-align: initial;
+                        }
+                    }
+
+                    .sprdr-con:nth-of-type(3) {
+                        height: 197px;
+                        margin-top: 0;
+    
+                        img:nth-of-type(1) {
+                            width: calc(11.1vw * 1.1);
+                            position: absolute;
+                            top: 0;
+                            left: 11.1vw;
+                            transform: translateY(-40px);
+                        }
+                        
+                        img:nth-of-type(2) {
+                            width: 19.6vw;
+                            height: fit-content;
+                            transform: translate(7.4vw, -60px);
+                        }
+                    }
+                }
+
+                .sprdr-detail {
+
+                    article {
+                        padding-bottom: 100px;
+                        margin-top: 0;
+
+                        &::before {
+                            display: none;
+                        }
+
+                        .sprdr-bg {
+                            width: 29.5vw;
+                            height: initial;
+                            left: 50%;
+                            transform: translate(-50%, -100%);
+                        }
+
+                        .sprdr-bg-text {
+                            width: 29.5vw;
+                            left: 50%;
+                            transform: translate(-50%, -40%);
+                        }
+
+                        h2 {
+                            padding-top: 80px;
+                            @include h2-pc;
+                        }
+
+                        .sprdr-flex {
+                            margin-top: 40px;
+                            @include center;
+
+                            .sprdr_img {
+                                width: 31.3vw;
+                                height: 31.3vw;
+                                margin: 0 0 0 0;
+                                z-index: 0;
+                            }
+
+                            .sprdr-copy {
+                                width: 31.3vw;
+                                box-shadow: 2px 6px 8px 0 rgba(0, 0, 0, .25);
+                                margin-left: 40px;
+
+                                &::before {
+                                    display: none;
+                                }
+
+                                h3 {
+                                    @include font-l-pc;
+                                }
+
+                                p:nth-of-type(2) {
+                                    @include font-s-pc;
+                                    color: $black;
+                                }
+
+                                .sprdr-cta {
+                                    @include cta1-pc;
+                                }
+                            }
+                        }
+
+                        .sprdr-photo {
+                            margin: 40px auto 0 auto;
+
+                            img {
+                                width: 100%;
+                                margin: 0 0;
+                            }
+                        }
+                    }
+
+                    .sprdr-carrot {
+
+                        .sprdr-photo {
+                            width: 36.4vw;
+    
+                            .sprdr-treat {
+                                width: 13.2vw;
+                                top: 0;
+                                right: 0;
+                                bottom: initial;
+                                left: initial;
+                                transform: translate(calc(100% - 79px), -42px);
+                            }
+                        }
+                    }
+
+                    .sprdr-honey {
+
+                        .sprdr-photo {
+                            width: 34.4vw;
+    
+                            .sprdr-treat {
+                                width: 10.8vw;
+                                top: 0;
+                                bottom: initial;
+                                left: 0;
+                                transform: translate(-115px, 0);
+                            }
+                        }
+                    }
+
+                    .sprdr-hyuganatsu {
+
+                        .sprdr-photo {
+                            width: 35vw;
+    
+                            .sprdr-treat {
+                                width: calc(14.3vw * .75);
+                                transform: translate(113px, -22px);
+                            }
+                        }
+                    }
                 }
             }
         }
