--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,6 +111,18 @@ img {
 
 html body .sprdr-fv {
   height: 100vw;
+  position: relative;
+}
+html body .sprdr-fv img {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+html body .sprdr-fv h1 {
+  width: 90%;
+  position: absolute;
+  top: 20px;
+  left: 10px;
 }
 html body .sprdr_main {
   background-color: #F7F7D0;
@@ -135,7 +147,7 @@ html body .sprdr_main .sprdr-epilogue .sprdr-con:nth-of-type(1) img:nth-of-type(
   position: absolute;
   top: 0;
   right: 0;
-  transform: translateX(93.1px);
+  transform: translateX(73.5px);
 }
 html body .sprdr_main .sprdr-epilogue h1 {
   font-size: 28px;
@@ -257,6 +269,11 @@ html body .sprdr_main .sprdr-detail article .sprdr-copy .sprdr-cta {
   background-color: #EBEB4A;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.25);
   margin: 12px auto 0 auto;
+  transition-duration: 0.2s;
+}
+html body .sprdr_main .sprdr-detail article .sprdr-copy .sprdr-cta:active {
+  box-shadow: 0 0 0 0 transparent;
+  transform: translateY(2px);
 }
 html body .sprdr_main .sprdr-detail article .sprdr-copy .sprdr-cta a {
   display: flex;
@@ -317,7 +334,7 @@ html body .sprdr_main .sprdr-detail .sprdr-hyuganatsu .sprdr-photo .sprdr-treat 
   transform: translate(-20px, 20px);
 }
 html body .sprdr_main .sprdr-detail .sprdr-french {
-  padding-bottom: 100px;
+  padding-bottom: 0;
 }
 html body .sprdr_main .sprdr-recommend {
   background-color: #FFFFFF;
@@ -360,6 +377,10 @@ html body .sprdr_main .sprdr-recommend .sprdr-cta {
   background-color: #B8193F;
   margin: 24px auto 0 auto;
 }
+html body .sprdr_main .sprdr-recommend .sprdr-cta:active {
+  box-shadow: 0 0 0 0 transparent;
+  transform: translateY(2px);
+}
 html body .sprdr_main .sprdr-recommend .sprdr-cta a {
   display: flex;
   justify-content: center;
@@ -382,7 +403,15 @@ html body .sprdr_main .sprdr-recommend:nth-last-of-type(1) {
     display: block !important;
   }
   html body .sprdr-fv {
-    height: initial;
+    height: 39vw;
+  }
+  html body .sprdr-fv h1 {
+    width: 48vw;
+    height: 28vw;
+    left: 60px;
+  }
+  html body .sprdr-fv h1 img {
+    height: 100%;
   }
   html body .sprdr_main .sprdr-epilogue .sprdr-con:nth-of-type(1) {
     height: 161px;
@@ -444,7 +473,7 @@ html body .sprdr_main .sprdr-recommend:nth-last-of-type(1) {
     width: 29.5vw;
     height: initial;
     left: 50%;
-    transform: translate(-50%, -100%);
+    transform: translate(-50%, calc(-100% + 1px));
   }
   html body .sprdr_main .sprdr-detail article .sprdr-bg-text {
     width: 29.5vw;
@@ -481,6 +510,14 @@ html body .sprdr_main .sprdr-recommend:nth-last-of-type(1) {
   html body .sprdr_main .sprdr-detail article .sprdr-flex .sprdr-copy p:nth-of-type(2) {
     font-size: 14px;
     color: #414143;
+  }
+  html body .sprdr_main .sprdr-detail article .sprdr-flex .sprdr-copy .sprdr-cta:active {
+    box-shadow: initial;
+    transform: initial;
+  }
+  html body .sprdr_main .sprdr-detail article .sprdr-flex .sprdr-copy .sprdr-cta:hover {
+    box-shadow: 0 0 0 0 transparent;
+    transform: translateY(2px);
   }
   html body .sprdr_main .sprdr-detail article .sprdr-flex .sprdr-copy .sprdr-cta a img {
     width: 80px;
@@ -523,6 +560,9 @@ html body .sprdr_main .sprdr-recommend:nth-last-of-type(1) {
   html body .sprdr_main .sprdr-detail .sprdr-hyuganatsu .sprdr-photo .sprdr-treat {
     width: 10.725vw;
     transform: translate(113px, -22px);
+  }
+  html body .sprdr_main .sprdr-detail .sprdr-french {
+    padding-bottom: 100px;
   }
   html body .sprdr_main .sprdr-recommend h2 {
     padding-left: 160px;
