--- a/assets/css/scss/style.scss
+++ b/assets/css/scss/style.scss
@@ -18,6 +18,15 @@ html {
                 top: 20px;
                 left: 10px;
             }
+
+            .sprdr_img {
+                width: 60%;
+                top: initial;
+                right: 0;
+                bottom: 0;
+                left: initial;
+                transform: translate(-20px, -20px);
+            }
         }
 
         .sprdr_main {
@@ -302,260 +311,4 @@ html {
     }
 }
 
-@media screen and (min-width: 768px) {
-
-    * {
-        font-size: 16px;
-    }    
-
-    .sprdr-sp {
-        display: none !important;
-    }
-    
-    .sprdr-pc {
-        display: block !important;
-    }
- 
-    html {
-
-        body {
-            
-            .sprdr-fv {
-                height: 39vw;
-
-                h1 {
-                    width: 48vw;
-                    height: 28vw;
-                    left: 60px;
-
-                    img {
-                        height: 100%;
-                    }
-                }
-            }
-
-            .sprdr_main {
-               
-                .sprdr-epilogue {
-
-                    .sprdr-con:nth-of-type(1) {
-                        height: 161px;
-
-                        img:nth-of-type(1) {
-                            width: 18.4vw;
-                            position: absolute;
-                            top: 0;
-                            left: 4.5vw;
-                            transform: translateX(0);
-                        }
-
-                        img:nth-of-type(2) {
-                            width: 15.3vw;
-                            max-width: 100%;
-                            height: auto;
-                            max-height: initial;
-                            right: 3.3vw;
-                            transform: translateX(0);
-                        }
-                    }
-
-                    .sprdr-copy {
-                        @include center;
-
-                        h1 {
-                            font-size: 32px;
-                            text-align: initial;
-                        }
-
-                        p {
-                            margin-top: 0;
-                            margin-left: 7.8vw;
-                            @include font-l-pc;
-                            text-align: initial;
-                        }
-                    }
-
-                    .sprdr-con:nth-of-type(3) {
-                        height: 197px;
-                        margin-top: 0;
-    
-                        img:nth-of-type(1) {
-                            width: calc(11.1vw * 1.1);
-                            position: absolute;
-                            top: 0;
-                            left: 11.1vw;
-                            transform: translateY(-40px);
-                        }
-                        
-                        img:nth-of-type(2) {
-                            width: 19.6vw;
-                            height: fit-content;
-                            transform: translate(7.4vw, -60px);
-                        }
-                    }
-                }
-
-                .sprdr-detail {
-
-                    article {
-                        padding-bottom: 100px;
-                        margin-top: 0;
-
-                        &::before {
-                            display: none;
-                        }
-
-                        .sprdr-bg {
-                            width: 29.5vw;
-                            height: initial;
-                            left: 50%;
-                            transform: translate(-50%, calc(-100% + 1px));
-                        }
-
-                        .sprdr-bg-text {
-                            width: 29.5vw;
-                            left: 50%;
-                            transform: translate(-50%, -40%);
-                        }
-
-                        h2 {
-                            padding-top: 80px;
-                            @include h2-pc;
-                        }
-
-                        .sprdr-flex {
-                            margin-top: 40px;
-                            @include center;
-
-                            .sprdr_img {
-                                width: 31.3vw;
-                                height: 31.3vw;
-                                margin: 0 0 0 0;
-                                z-index: 0;
-                            }
-
-                            .sprdr-copy {
-                                width: 31.3vw;
-                                box-shadow: 2px 6px 8px 0 rgba(0, 0, 0, .25);
-                                margin-left: 40px;
-
-                                &::before {
-                                    display: none;
-                                }
-
-                                h3 {
-                                    @include font-l-pc;
-                                }
-
-                                p:nth-of-type(2) {
-                                    @include font-s-pc;
-                                    color: $black;
-                                }
-
-                                .sprdr-cta {
-                                    @include cta1-pc;
-                                }
-                            }
-                        }
-
-                        .sprdr-photo {
-                            margin: 40px auto 0 auto;
-
-                            img {
-                                width: 100%;
-                                margin: 0 0;
-                            }
-                        }
-                    }
-
-                    .sprdr-carrot {
-
-                        .sprdr-photo {
-                            width: 36.4vw;
-    
-                            .sprdr-treat {
-                                width: 13.2vw;
-                                top: 0;
-                                right: 0;
-                                bottom: initial;
-                                left: initial;
-                                transform: translate(calc(100% - 79px), -42px);
-                            }
-                        }
-                    }
-
-                    .sprdr-honey {
-
-                        .sprdr-photo {
-                            width: 34.4vw;
-    
-                            .sprdr-treat {
-                                width: 10.8vw;
-                                top: 0;
-                                bottom: initial;
-                                left: 0;
-                                transform: translate(-115px, 0);
-                            }
-                        }
-                    }
-
-                    .sprdr-hyuganatsu {
-
-                        .sprdr-photo {
-                            width: 35vw;
-    
-                            .sprdr-treat {
-                                width: calc(14.3vw * .75);
-                                transform: translate(113px, -22px);
-                            }
-                        }
-                    }
-
-                    .sprdr-french {
-                        padding-bottom: 100px;
-                    }
-                }
-
-                .sprdr-recommend {
-
-                    h2 {
-                        padding-left: 160px;
-                        @include font-3l-pc;
-                    }
-
-                    ul {
-                        width: calc(100% - 320px);
-
-                        li {
-                            width: calc((100% - (16px * 5)) / 6);
-                            margin: 0 0 0 16px;
-                        }
-
-                        li:nth-of-type(even) {
-                            margin-left: 16px;
-                        }
-    
-                        li:nth-of-type(1) {
-                            margin-left: 0;
-                        }
-                    }
-
-                    .sprdr-cta {
-                        @include cta2-pc;
-                    }
-                }
-
-                .sprdr-lp {
-                    padding-top: 100px;
-
-                    ul {
-
-                        li {
-                            width: calc((100% - (16px * 3)) / 4);
-                        }
-                    }
-                }
-            }
-        }
-    }
-}
+@import './responsive/style';
